# pysfml-net

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: 01_window.py  02_sprite.py  03_label.py  04_movement.py  05_camera_follow.py  06_sound.py  07_animation.py  08_game.py  collision.py  game.py  movement.py  shapes.py  sound.py  text.py  texture.py  window.py
pysfml/: __init__.py  _core.py  camera.py  label.py  sound.py  sprite.py  window.py
pysfmllib/: Camera.cs  Label.cs  Sound.cs  Sprite.cs  Window.cs  pysfmllib.csproj
