[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysfml-net"
version = "1.0.7"
description = "Python wrapper for SFML via C# (SFML.NET) and pythonnet"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["pythonnet>=3.0"]

[project.urls]
Homepage = "https://github.com/yourname/pysfml"
Issues   = "https://github.com/yourname/pysfml/issues"