[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysfml-net"
version = "1.1.2"
description = "Python wrapper for SFML via C# (SFML.NET) and pythonnet"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["pythonnet>=3.0"]

[project.urls]
Homepage = "https://github.com/TheNeyzi4/pysfml-net"
Issues   = "https://github.com/TheNeyzi4/pysfml-net/issues"

[tool.setuptools.packages.find]
include = ["pysfml*"]